refactor(marketPrice) : GPT 호출 실패시 500 에러 대신 빈 리스트 반환